--- a/index.html
+++ b/index.html
@@ -1548,15 +1548,8 @@
      </div>
    </div>
 
-
-
-
-
-
-
-
-
-
+<script src="html2canvas.min.js"></script>
+<script src="jspdf.umd.min.js"></script>
 
   <script>
     // ---------- Utility ----------
